# CPPython-Vcpkg

./: LICENSE  README.md  pyproject.toml
.github/workflows/: integrate.yml  publish.yml  publish_dev.yml
cppython-vcpkg/plugins/generator/: vcpkg.py
cppython_vcpkg/: plugin.py  resolution.py  schema.py
tests/integration/: test_generator.py
tests/unit/: test_generator.py  test_provider.py
